# message-integrate-agent

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.prod  README-DEPLOY.md  README.md  claude.settings.json  deploy.sh  docker-compose.prod.yml  docker-compose.yml  findings.md  package.sh  progress.md  pyproject.toml  requirements.txt  start-docker.sh  start.sh  stop.sh  task_plan.md  test_academic_prompts.py  test_feishu_ws.py  test_firecrawl_science.py  test_github_trending.py  test_pipeline_academic.py  test_system.py  test_ws_long_connection.py  webhook_server.py
.learnings/: ERRORS.md  LEARNINGS.md  checkpoints.db
bettafish/: Dockerfile  app.py
config/: ngrok.yml  proxy.yaml  settings.yaml
docker-images/: DEPLOY.md  build.sh  deploy.sh  docker-compose.prod.yml
docs/: analysis_report.md  architecture.md  deployment-nas.md  test_evaluation_report.md
message-hub-20260309/: docker-compose.prod.yml
mirofish/: Dockerfile  app.py
scripts/: build-and-export.sh  deploy-nas.sh  export-image.sh  import-image.sh  package-simple.sh  package.sh  start.sh  stop.sh
src/: __init__.py  config.py  config_validator.py  error_handling.py  main.py
tests/: conftest.py  fixtures.py  test_adapters.py  test_agent_pool.py  test_config.py  test_docker_llm.py  test_feishu_e2e.py  test_feishu_messages.py  test_gateway.py  test_intelligence_full_pipeline.py  test_intelligence_pipeline.py  test_keyword_router.py  test_llm_agent.py  test_llm_integration.py  test_menu_handler.py  test_message.py  test_pipeline.py  (+3 more)
(+113 files in other folders)
